# SleepAgent

./: README.md  environment.yml  pyproject.toml
configs/: foundation_config.yaml  grounding_config.yaml  hypothesis_config.yaml  mechanism_templates.yaml  project_config.yaml  scoring_rules.yaml  variable_mapping_rules.yaml
data/fixtures/: toy_approved_variables.yaml  toy_dti_features.csv  toy_eeg_features.csv  toy_feature_registry.csv  toy_fmri_features.csv  toy_mri_features.csv  toy_multimodal_master_table.csv  toy_qc_summary.csv  toy_scale_features.csv  toy_seed_papers.csv  toy_subject_index.csv
data/foundation/: approved_variables.yaml  data_dictionary.yaml  feature_registry.csv  multimodal_master_table.csv  qc_summary.csv  subject_index.csv
neuro_research_agent/: __init__.py
neuro_research_agent/core/: cache.py  (+2 more)
reports/: data_foundation_report.md  phase1_grounding_report.md  phase2_hypothesis_report.md
scripts/: run_data_foundation.py  run_neuroscience_research_agent.py  run_phase1_grounding.py
sleep_ai_scientist/: cli.py
sleep_ai_scientist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_profile.py  test_evidence_extractor.py  test_evidence_grader.py  test_foundation_approved_variables.py  test_foundation_feature_registry.py  test_foundation_master_table.py  test_foundation_pipeline.py  test_foundation_qc_integrator.py  test_foundation_subject_index.py  test_grounding_pipeline.py  test_hypothesis_registry.py  test_literature_loader.py  test_mechanism_graph.py  test_retrieval.py  test_schemas.py  test_variable_mapper.py
(+671 files in other folders)
