[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroscience-research-agent"
version = "0.1.0"
description = "A neuroscience research agent inspired by AI-Researcher."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "nibabel",
  "nilearn",
  "scipy",
  "requests",
  "matplotlib",
]
