[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep-ai-scientist"
version = "0.1.0"
description = "SleepAgent Phase 1 knowledge and data grounding system."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["sleep_ai_scientist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
